# haskell-polysemy-test

./: .gitignore  LICENSE  README.md  package.yaml  polytest.cabal  stack.yaml
app/: Main.hs
src/example1/: Main.hs
src/example2/: Main.hs
src/example3/: Main.hs
